Add in analyze-source.

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <title>luckytyphlosion's website</title>
 <body>
   <a href="./auto-tt-recorder.html">Auto TT Recorder</a>
+  <a href="./analyze-source.html">analyze-source</a>
 </body>
 </html>
