Add in other pages.

--- a/analyze-source.html
+++ b/analyze-source.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>analyze-source</title>
+<script src="replace-page-hrefs.js"></script>
 <body>
   <h1>analyze-source</h1>
   <img width="50%" src="./analyze-source-demo.png" alt="Sample output of analyze-source"></img> 
