--- a/auto-tt-recorder.html
+++ b/auto-tt-recorder.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>Auto-TT-Recorder</title>
+<script src="replace-page-hrefs.js"></script>
 <body>
   <h1>Auto-TT-Recorder</h1>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/pDp-LCe_dbg" title="YouTube video player" style="border:0;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <p>Between 2021 and 2022, I created a command line tool called Auto-TT-Recorder to automatically record (as a video) single player races or “Time Trials” of Mario Kart Wii using the game’s built-in replay feature. The GitHub page can be found <a href="https://github.com/luckytyphlosion/auto-tt-recorder">here</a>. Python was used for the main program logic, a Wii emulator named <a href="https://dolphin-emu.org/">Dolphin</a> was used to run the Mario Kart Wii ISO, and FFmpeg was used to encode the resulting video.</p>
+
+  <p><a href="https://github.com/luckytyphlosion/auto-tt-recorder">GitHub link</a></p>
+
+  <p>Between 2021 and 2022, I created a command line tool called Auto-TT-Recorder to automatically record (as a video) single player races or “Time Trials” of Mario Kart Wii using the game’s built-in replay feature. Python was used for the main program logic, a Wii emulator named <a href="https://dolphin-emu.org/">Dolphin</a> was used to run the Mario Kart Wii ISO, and FFmpeg was used to encode the resulting video.</p>
   <p>The program has seen use on channels that upload Mario Kart Wii time trials, such as <a href="https://www.youtube.com/channel/UCxCPLtXIg43HRP6QZN8gyYQ">CTGP Records</a>, <a href="https://www.youtube.com/c/200ccCTGPRecords">200cc CTGP Records</a>, and <a href="https://www.youtube.com/c/CTGPKartRecords">CTGP Kart Records</a>.</p>
   <p>Various features were added into the program, such as:</p>
   <ul>
