--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>luckytyphlosion's website</title>
+<script src="./replace-page-hrefs.js"></script>
 <body>
-  <a href="./auto-tt-recorder.html">Auto TT Recorder</a>
-  <a href="./analyze-source.html">analyze-source</a>
+  <div>
+    <a href="./index.html">Home</a>
+    <a href="./projects">Projects</a>
+    <a href="./about">About</a>
+  </div>
+  <p>My website. You can take a look at some of my projects, or read about me.</p>
 </body>
 </html>
